remove 64bit fields from BseUndoStep data union and added long/ulong
Mon Dec 15 21:16:49 2003  Tim Janik  <timj@gtk.org>

        * bseundostack.h: remove 64bit fields from BseUndoStep data union and
        added long/ulong fields to reduce memory usage on 32bit systems.

        * bseitem.c:
        * bsecontainer.c: use v_long/v_ulong data fields in BseUndoStep.

svn path=/trunk/; revision=1654

--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 FIXMES:
+- skip undo for trigger properties
 - disable bseevaluator without --devel as it's unstable
 - remove hpack and vpack
 - make plugins/Makefile.am actually pick up *.idl files in distribution tarballs
-- remove 64bit data fields from BseUndoStep if possible
 - remove bstrack*.[hc] cruft, old parasites and data pocket
 - allow parasite object links only within tree
 - s/sfi_value_rec_take_ref/sfi_value_take_rec/
